--- a/PhotoCarousell/Base.lproj/Main.storyboard
+++ b/PhotoCarousell/Base.lproj/Main.storyboard
@@ -49,16 +49,25 @@
                                     <action selector="veryLastButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="boA-vd-8Rk"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bHJ-Nt-36W">
+                                <rect key="frame" x="172" y="629" width="31" height="30"/>
+                                <state key="normal" title="地圖"/>
+                                <connections>
+                                    <action selector="goToMapClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WgN-GN-S7G"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9ch-Te-Kur" firstAttribute="centerY" secondItem="Po8-73-Jp2" secondAttribute="centerY" id="6KD-FK-CZd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bHJ-Nt-36W" secondAttribute="bottom" constant="8" id="AF7-lL-8OL"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0B7-3M-xW7" secondAttribute="bottom" constant="8" id="APw-qz-La5"/>
                             <constraint firstItem="Po8-73-Jp2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QoC-I2-kYz"/>
                             <constraint firstItem="rG1-Gg-HQd" firstAttribute="centerY" secondItem="0B7-3M-xW7" secondAttribute="centerY" id="TbC-gg-3FJ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Po8-73-Jp2" secondAttribute="bottom" constant="8" id="XZW-b1-vvZ"/>
                             <constraint firstItem="0B7-3M-xW7" firstAttribute="leading" secondItem="rG1-Gg-HQd" secondAttribute="trailing" constant="8" id="c1B-Yz-Bqj"/>
                             <constraint firstItem="0B7-3M-xW7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hke-8m-Rke"/>
+                            <constraint firstItem="bHJ-Nt-36W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i1n-ZT-Pkt"/>
                             <constraint firstItem="9ch-Te-Kur" firstAttribute="leading" secondItem="Po8-73-Jp2" secondAttribute="trailing" constant="8" id="r8B-8H-hQ6"/>
                         </constraints>
                     </view>
